--- a/files/en-us/mozilla/add-ons/webextensions/add_a_button_to_the_toolbar/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/add_a_button_to_the_toolbar/index.html
@@ -75,12 +75,12 @@ browser.browserAction.onClicked.addListener(openPage);</pre>
 
 <p>At this point the complete extension should look like this:</p>
 
-<pre class="line-numbers  language-html"><code class="language-html">button/
+<pre class="brush: plain">button/
     icons/
         page-16.png
         page-32.png
     background.js
-    manifest.json</code></pre>
+    manifest.json</pre>
 
 <p>Now <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">install the extension</a> and click the button:</p>
 
