--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/user_scripts/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/user_scripts/index.html
@@ -24,7 +24,7 @@ browser-compat: webextensions.manifest.user_scripts
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json; line-numbers language-json">
+    <pre class="brush: json">
   "user_scripts": {
     "api_script": "apiscript.js",
   }
