--- a/files/en-us/mozilla/add-ons/webextensions/modify_a_web_page/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/modify_a_web_page/index.html
@@ -120,10 +120,10 @@ browser.contextMenus.onClicked.addListener(function(info, tab) {
 
 <p>At this point the extension should look like this:</p>
 
-<pre class="line-numbers  language-html"><code class="language-html">modify-page/
+<pre class="brush: plain">modify-page/
     background.js
     manifest.json
-    page-eater.js</code></pre>
+    page-eater.js</pre>
 
 <p>Now <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/#reloading_a_temporary_add-on">reload the extension</a>, open a page (any page, this time) activate the context menu, and select "Eat this page":</p>
 
