--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_action/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_action/index.html
@@ -27,7 +27,7 @@ tags:
 
 <p>There are two ways to specify a browser action: with or without a <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Popups">popup</a>. If you don't specify a popup, when the user clicks the button an event is dispatched to the extension, which the extension listens for using <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/browserAction/onClicked" title="Fired when a browser action icon is clicked. This event will not fire if the browser action has a popup."><code>browserAction.onClicked</code></a>:</p>
 
-<pre class="brush: js line-numbers language-js">browser.browserAction.onClicked.addListener(handleClick);</pre>
+<pre class="brush: js">browser.browserAction.onClicked.addListener(handleClick);</pre>
 
 <p>If you specify a popup, the click event is not dispatched: instead, the popup is shown when the user clicks the button. The user is able to interact with the popup and it closes automatically when the user clicks outside it. See the <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Popups">Popup</a> article for more details on creating and managing popups.</p>
 
