--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/devtools_panels/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/devtools_panels/index.html
@@ -23,7 +23,7 @@ tags:
 
 <p>Add the devtools page by including the <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/devtools_page">devtools_page</a></code> key in extension's <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json">manifest.json</a> and provide the location of the page's HTML file in the extension:</p>
 
-<pre class="brush: json line-numbers  language-json">&quot;devtools_page&quot;: &quot;devtools-page.html&quot;</pre>
+<pre class="brush: json">&quot;devtools_page&quot;: &quot;devtools-page.html&quot;</pre>
 
 <p>From the devtools page, call a script that will add the devtools panel:</p>
 
