--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/notifications/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/notifications/index.html
@@ -33,7 +33,7 @@ browser.notifications.create({
 
 <p>If the notification includes a call to action, you can listen for the user clicking the notification to call the function to handle the action:</p>
 
-<pre class="brush: js line-numbers  language-js">browser.notifications.onClicked.addListener(handleClick);
+<pre class="brush: js">browser.notifications.onClicked.addListener(handleClick);
 </pre>
 
 <p>If you are issuing calls to action through notifications, you will also want to define the optional notification <code>id</code>, so you can figure out which call to action the user has selected.</p>
