--- a/files/en-us/mozilla/add-ons/webextensions/your_second_webextension/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/your_second_webextension/index.html
@@ -111,7 +111,7 @@ cd beastify</pre>
 
 <p>If you choose to supply your own icon, It should be 48x48 pixels. You could also supply a 96x96 pixel icon, for high-resolution displays, and if you do this it will be specified as the <code>96</code> property of the <code>icons</code> object in manifest.json:</p>
 
-<pre class="brush: json line-numbers  language-json">&quot;icons&quot;: {
+<pre class="brush: json">&quot;icons&quot;: {
   &quot;48&quot;: &quot;icons/beasts-48.png&quot;,
   &quot;96&quot;: &quot;icons/beasts-96.png&quot;
 }</pre>
