--- a/files/en-us/mozilla/add-ons/webextensions/browser_actions/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/browser_actions/index.html
@@ -24,7 +24,7 @@ tags:
 
 <p>You define the browser action's properties - icon, title, popup - using the <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/browser_action">browser_action</a></code> key in manifest.json:</p>
 
-<pre class="brush: jsonon">&quot;browser_action&quot;: {
+<pre class="brush: json">&quot;browser_action&quot;: {
   &quot;default_icon&quot;: {
     &quot;19&quot;: &quot;button/geo-19.png&quot;,
     &quot;38&quot;: &quot;button/geo-38.png&quot;
